# vibe-antigravity-clock

./: CMakeLists.txt  LICENSE  README.md
src/: ClockWidget.cpp  ClockWidget.h  main.cpp
